# HookSniff

./: .ai-context  .build-trigger  .dockerignore  .env.example  .env.production  .env.production.example  .gcloudignore  .gitattributes  .gitignore  .sdk-tokens.env.template  .vercel-deploy-trigger  .vercelignore  AI_MEMORY.md  BASLAT.ps1  BUGS.md  BUG_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CODE_OF_CONDUCT.md  COMMANDS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_DEEP_DIVE.md  COMPLETION_PLAN.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_FIXES_SUMMARY.txt  DEPLOY_GUIDE.md  DR_PLAN.md  Dockerfile.ai-center  Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  ERROR  FEATURES.md  FREE_TIER_SETUP.md  GCP_DEPLOYMENT_GUIDE.txt  GCP_SETUP.md  HANDOFF.md  HEARTBEAT.md  (+107 more)
ai-center/: Cargo.toml
ai-center/migrations/: 003_ai_center.sql  004_agents.sql
ai-center/src/: config.rs  db.rs  http.rs  main.rs
ai-center/src/agents/: context.rs  mod.rs  orchestrator.rs  result.rs
ai-center/src/ai_engine/: analyzer.rs  cerebras.rs  gemini.rs  groq.rs  mimo.rs  mod.rs  openai.rs  openai_compatible.rs  openrouter.rs  orchestrator.rs  provider.rs
ai-center/src/defense/: blocker.rs  detector.rs  mod.rs
ai-center/src/fix/: circuit.rs  mod.rs  retry.rs
ai-center/src/marketplace/: builder.rs  mod.rs  registry.rs
ai-center/src/monitor/: mod.rs  system.rs  webhooks.rs
ai-center/src/notify/: email.rs  mod.rs  slack.rs
ai-center/src/risk/: mod.rs  scorer.rs
api/: Cargo.toml
api/benches/: api_benchmarks.rs
api/docs/: CONTRIBUTING.md  HOW_TO_ADD_AI.md  ai-center-plan.md
api/migrations/: 001_initial_schema.sql  002_constraints_and_indexes.sql  003_indexes_triggers_constraints.sql  004_webhook_idempotency.sql  005_password_hash_not_null.sql  006_missing_performance_indexes.sql  007_2fa_backup_codes.sql  007_platform_settings.sql  008_admin_missing_tables.sql  009_add_customers_missing_columns.sql  009_sync_missing_tables.sql  010_gdpr_consent.sql  011_totp_encryption_fixes.sql  012_token_revocation.sql  013_add_customer_role.sql  013_applications.sql  014_overage_settings.sql  015_feature_flags.sql  016_missing_payment_columns.sql  017_transform_rules.sql  018_seq_scan_indexes.sql  019_admin_upgrade.sql  019_device_tokens.sql  020_audit_log_composite_index.sql  020_feature_flags_integration.sql  021_alert_rules_nullable_cooldown.sql  022_sso_configs.sql  023_sso_admin_bypass.sql  070_notification_prefs_align.sql  071_email_change_codes.sql  072_billing_compliance.sql  112_performance_fixes.sql
api/proptest-regressions/: proptest_helpers.txt
api/sql/migrations/: 001_initial_schema.sql  002_add_password_hash.sql  003_add_endpoint_security_columns.sql  004_add_secret_rotation.sql  005_add_retry_policy.sql  006_routing.sql  007_fifo_ordering.sql  008_endpoint_throttling.sql  009_webhook_queue.sql  010_add_endpoint_format.sql  011_seen_webhooks.sql  012_retry_policies.sql  013_transform_rules.sql  014_event_schemas.sql  015_api_keys.sql  016_alert_rules.sql  017_ai_center.sql  018_ai_agents.sql  019_marketplace.sql  020_fifo_queue.sql  021_delivery_targets.sql  022_stripe_columns.sql  023_updated_at_webhook_queue.sql  024_listen_notify.sql  025_trace_id.sql  026_response_headers.sql  027_deliveries_updated_at_error.sql  028_invoices.sql  029_payment_transactions.sql  030_customer_payment_columns.sql  031_remove_signing_secret_from_queue.sql  032_teams.sql  033_notifications.sql  034_idempotency_body_hash.sql  035_customer_missing_columns.sql  036_inbound_configs.sql  037_notification_preferences.sql  038_email_verified_totp.sql  039_password_reset_tokens.sql  040_email_verification_tokens.sql  (+18 more)
api/src/: audit.rs  background.rs  cache.rs  circuit_breaker.rs  config.rs  config_tests.rs  cors.rs  crypto.rs  db.rs  email.rs  email_templates.rs  email_tests.rs  error.rs  feature_flags.rs  gmail_smtp.rs  http_client.rs  kafka.rs  lib.rs  main.rs  metrics.rs  middleware.rs  middleware_tests.rs  proptest_helpers.rs  qstash.rs  queue.rs  queue.rs.bak  queue_tests.rs  r2.rs  rate_limit.rs  resend_email.rs  security_monitor.rs  signing.rs  ssrf.rs  telemetry.rs  validation.rs  webhook_count_buffer.rs
api/src/agents/: auth.rs  event_bridge.rs  mod.rs  models.rs  routes.rs  security.rs  validation.rs
api/src/auth/: jwt.rs
api/src/billing/: billing_tests.rs  iyzico.rs  mod.rs  models.rs  paddle.rs  polar.rs  provider.rs  refund.rs  stripe.rs
api/src/cortex/: action_memory.rs  alert_correlation.rs  anomaly_scorer.rs  config.rs  healing_engine.rs  insights_engine.rs  mod.rs  predictive_engine.rs  proactive_healing.rs  profile_engine.rs  recovery_surge.rs  scheduler.rs  signal_collector.rs  smart_routing.rs
api/src/events/: cloudevents.rs  mod.rs  overage.rs  publisher.rs
api/src/fifo/: mod.rs  tests.rs
api/src/industry/: ecommerce.rs  fintech.rs  healthcare.rs  mod.rs  saas.rs
api/src/jobs/: alert_eval.rs  dunning.rs  job_queue.rs  metrics_push.rs  mod.rs  overage_invoicing.rs  retention.rs  weekly_digest.rs
api/src/middleware/: bot_detection.rs  ddos.rs  idempotency.rs  ip_blocklist.rs  mod.rs  webhook_verify.rs  zero_trust.rs
api/src/models/: application.rs  background_task.rs  coupon.rs  customer.rs  delivery.rs  endpoint.rs  environment.rs  environment_variable.rs  idempotency.rs  mod.rs  operational_webhook.rs  operational_webhook_delivery.rs
api/tests/: cortex_integration.rs  db_integration.rs  db_test.rs  integration.rs  security_owasp.rs
common/: Cargo.toml
common/src/: header_validation.rs  http_client.rs  lib.rs  signing.rs  ssrf.rs
sdks/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdks/rust/: Cargo.toml  README.md
worker/: Cargo.toml
worker/src/: batch.rs  circuit_breaker.rs  config.rs  cortex_integration.rs  delivery.rs  dns_cache.rs  fanout.rs  fifo.rs  grace.rs  health.rs  helpers.rs  idempotency_cache.rs  main.rs  metrics_push.rs  notifications.rs  operational_webhook.rs  queue.rs  retention.rs  retry_scheduler.rs  secret_cache.rs  signing.rs  ssrf_cache.rs  telemetry.rs  throttle.rs  types.rs
(+10027 files in other folders)
