[workspace]
members = ["api", "worker", "common"]
exclude = ["sdks/rust"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
quick-xml = "0.37"

# Item 299: Shared OpenTelemetry versions across api and worker
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"

[patch.crates-io]
tracing-opentelemetry = { path = "vendor/tracing-opentelemetry" }
