[package]
name = "hookrelay-ai-center"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "chrono", "uuid"] }
dotenvy = "0.15"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.30"
async-trait = "0.1"
futures = "0.3"
axum = "0.7"
tower = "0.4"
