[package]
name = "hooksniff-api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry integration
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto"] }
tonic = "0.12"
tracing-opentelemetry = "0.25"

axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "chrono", "uuid", "postgres", "json"] }
dotenvy = "0.15"
thiserror = "1"
url = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
prometheus = "0.13"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-stream = "0.3"
futures = "0.3"
async-trait.workspace = true
redis = { version = "0.25", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
totp-rs = { version = "5", features = ["otpauth"] }
base32 = "0.5"
