[package]
name = "hooksniff-api"
version.workspace = true
edition.workspace = true

[dependencies]
cookie = "0.18"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Shared crate
hooksniff-common = { path = "../common" }

# OpenTelemetry integration — Item 299: use workspace versions where possible
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { version = "0.32", features = ["http-json", "reqwest"] }
tonic = "0.14"
tracing-opentelemetry.workspace = true

axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "chrono", "uuid", "postgres", "json"] }
dotenvy = "0.15"
thiserror = "2"
url = "2"
sha2 = "0.11"
sha1 = "0.11"
hmac = "0.13"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
# rustls 0.23+ requires explicit CryptoProvider — pin 'ring' backend
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
base64 = "0.22"
prometheus = "0.14"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.10"
once_cell = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form", "http2"] }
async-stream = "0.3"
futures = "0.3"
async-trait.workspace = true
redis = { version = "1", default-features = false, features = ["tokio-rustls-comp", "connection-manager", "script"] }
totp-rs = { version = "5", features = ["otpauth"] }
base32 = "0.5"
urlencoding = "2"
aes-gcm = "0.10"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "api_benchmarks"
harness = false
