[package]
name = "hooksniff-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for HookSniff API and Worker"

[dependencies]
# Crypto
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"

# Time
chrono.workspace = true

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Error handling
thiserror = "2"

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# URL parsing
url = "2"
