[package]
name = "hooksniff-worker"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "chrono", "uuid", "postgres", "json"] }
dotenvy = "0.15"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# OpenTelemetry integration
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["http-proto"] }
tonic = "0.14"
tracing-opentelemetry = "0.32"
