[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hooksniff"
version = "0.5.0"
description = "Official Python SDK for the HookSniff webhook delivery API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HookSniff", email = "support@hooksniff.vercel.app" },
]
keywords = ["webhook", "hooksniff", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/servetarslan02/HookSniff"
Documentation = "https://github.com/servetarslan02/HookSniff/tree/main/sdks/python"
Repository = "https://github.com/servetarslan02/HookSniff"
Issues = "https://github.com/servetarslan02/HookSniff/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hooksniff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
