[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hooksniff"
version = "0.5.0"
description = "HookSniff Python SDK — Svix-style webhook delivery platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HookSniff", email = "support@hooksniff.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "attrs>=22.0.0",
    "standardwebhooks>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://hooksniff.com"
Documentation = "https://docs.hooksniff.com"
Repository = "https://github.com/servetarslan02/HookSniff"
Issues = "https://github.com/servetarslan02/HookSniff/issues"

[tool.hatch.build.targets.wheel]
packages = ["hooksniff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
