[package]
name = "hooksniff"
version = "0.4.0"
edition = "2021"
description = "Official Rust SDK for the HookSniff webhook delivery API"
license = "MIT"
authors = ["HookSniff <support@hooksniff.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
