[package]
name = "hooksniff"
version = "1.0.0"
edition = "2021"
description = "HookSniff webhooks API client and webhook verification library"
homepage = "https://hooksniff.com"
repository = "https://github.com/servetarslan02/HookSniff"
readme = "README.md"
license = "MIT"
keywords = ["hooksniff", "webhooks"]
categories = [
    "development-tools",
    "asynchronous",
    "network-programming",
    "web-programming",
]
include = ["src/**/*", "README.md"]
rust-version = "1.75"

[features]
default = ["http1", "rustls-tls"]
http1 = ["hyper-util/http1", "hyper-rustls?/http1"]
http2 = ["hyper-util/http2", "hyper-rustls?/http2"]
rustls-tls = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/rustls-native-certs"]

[dependencies]
base64 = "0.13"
hmac-sha256 = "1"
http02 = { package = "http", version = "0.2.0" }
http1 = { package = "http", version = "1.0.0" }
http-body-util = "0.1.0"
hyper = "1.7.0"
hyper-rustls = { version = "0.27.7", optional = true }
hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "tokio"] }
itertools = "0.14.0"
js_option = "0.1.1"
percent-encoding = "2.3.1"
rand = "0.9.0"
rustls = { version = "0.23.31", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["time"] }
tower-service = "0.3.3"
tracing = { version = "0.1.41", default-features = false }
url = "2.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros"] }
